ccjegyzet/new/const.txt
$ clang -c const.cc
const.cc:15:6: error: read-only variable is not assignable
        FOO = 3;
        ~~~ ^
const.cc:17:6: error: read-only variable is not assignable
        BAR = 3;
        ~~~ ^
const.cc:24:2: error: no matching function for call to 'mutate'
        mutate(&FOO);
        ^~~~~~
const.cc:8:6: note: candidate function not viable: 1st argument ('const int *') would lose const qualifier
void mutate(int *val);
     ^
const.cc:39:18: error: read-only variable is not assignable
        CONSTANT_STRING = "many";
        ~~~~~~~~~~~~~~~ ^
const.cc:42:13: error: read-only variable is not assignable
        string1[0] = 0;
        ~~~~~~~~~~ ^
const.cc:44:21: error: read-only variable is not assignable
        CONSTANT_STRING[0] = 0;
        ~~~~~~~~~~~~~~~~~~ ^
6 errors generated.
